// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document-public-access should delete public access for a valid document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Entry not found","status":404,"detail":"The specified entry was not found.","operationStatus":"EntryNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-document-public-access should delete public access for a valid document 2`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Entry not found","status":404,"detail":"The specified entry was not found.","operationStatus":"EntryNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-document-public-access should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The document could not be found","status":404,"operationStatus":"ContentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
